# avito_room_booking_service

./: .env.example  .gitignore  Dockerfile  Dockerfile.test  README.md  alembic.ini  conftest.py  docker-compose.yaml  locustfile.py  pyproject.toml  pytest.ini
run/: main.py
src/application/dto/: auth.py  booking.py  rooms.py  schedule.py  slots.py
src/application/mappers/: bookings.py  rooms.py  schedules.py  slots.py  users.py
src/application/use_case/: auth.py  bookings.py  rooms.py  schedule.py  slots.py
src/config/: settings.py
src/core/: repositories.py
src/core/domain/: models.py
src/infrastructure/auth/: jwt.py
src/infrastructure/database/: db_config.py  db_helper.py  models.py
src/infrastructure/database/repositories/: bookings.py  rooms.py  schedules.py  slots.py  users.py
src/interfaces/: dependencies.py
src/interfaces/api/: auth.py  bookings.py  dependencies.py  rooms.py  schedules.py  shcedules.py  slots.py
src/migrations/: env.py
src/migrations/versions/: 5975ff8798a5_init_schema.py
src/tests/: integration_test.py  jwt_test.py  test_dto_schedule.py  test_usecase_auth.py  test_usecase_schedule.py  test_usecase_slots.py  usecase_booking_test.py
src/tests/locust/: help.txt  locustfile.py
