[project]
name = "test-backend-colosss"
version = "0.1.0"
description = ""
authors = [
    {name = "colosss",email = "kocnevs.jk@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standart] (>=0.135.2,<0.136.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "sqlalchemy[asyncio] (>=2.0.48,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "pytest-async (>=0.1.1,<0.2.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pytest-dotenv (>=0.5.2,<0.6.0)",
    "alembic (>=1.18.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
